とりあえず次に行く

--- a/git/src/1.about_git.md
+++ b/git/src/1.about_git.md
@@ -5,7 +5,7 @@
 gitは分散リポジトリ型です。
 分散型にはsvnのような中央リポジトリはなく、
 リポジトリの完全な機能は個々のコンピュータにあります。
-以下、個々のコンピュータの中にあるリポジトリのことを **ローカルリポジトリ** と呼びます。
+以降、個々のコンピュータの中にあるリポジトリのことを **ローカルリポジトリ** と呼びます。
 
 しかし、普通はプロジェクトの成果を共有する必要があるので、
 中央リポジトリと同じような立場の **共有リポジトリ** を用意するケースがほとんどだと思います。
@@ -34,3 +34,5 @@ gitは分散リポジトリ型です。
 多くの場合、共有リポジトリとローカルリポジトリには乖離が発生し、共有操作で少しずつ解消されていきます。
 gitでは、この共有操作が一番難しく、これを完全にコントロールすることが重要です。
 
+共有されているコードとされてないコードの区別を常に意識し、
+まだ共有されてはいけないコードが共有されないようにする必要があります。
