コマンド例を分割

--- a/git/src/3.branch.md
+++ b/git/src/3.branch.md
@@ -76,32 +76,29 @@ $ git merge --no-ff topic_A
 一つのトピックに二人の作業がコミットされることになります。
 このような場合に、トピックブランチをリモートブランチとして共有します。
 
+```
+(自分が作る場合)
+$ git checkout master
+$ git checkout -b topic_master
+$ git push origin topic_master # リモートブランチとして共有される
+
+(他の人が作った場合)
+$ git checkout -b topic_master origin/topic_master # リモートからローカルにコピー
+```
+
 このリモートブランチは、トピック開発という小さな世界のmasterブランチのようなものなので、
 masterと同様に直接コミットしてはいけません。
 トピックマスターとでも呼ぶことにします。
 自分の作業は、トピックマスターから更にトピックブランチを作り、そこにコミットします。
 作業が終わったトピックブランチはもちろんトピックマスターにマージします。
 
-自分がトピックをはじめる場合は次のようなコマンドになります。
-
 ```
-$ git checkout master
-$ git checkout -b topic_master
-$ git push origin topic_master # リモートブランチとして共有される
+$ git checkout topic_master
 $ git checkout -b topic_A      # 更にトピックブランチを作る
 $ (commit)
 $ git checkout topic_master
 $ git merge --no-ff topic_A    # topic_masterに自分のtopic_Aをマージ
 $ git push origin topic_master # 更新をpush
-```
-
-他の人が作り始めたトピックに後乗りする場合は次のようなコマンドになります。
-
-```
-$ git checkout master
-$ git checkout -b topic_master origin/topic_master # リモートかローカルブランチを作る
-$ git checkout -b topic_A      # 更にトピックブランチを作る
-(これ以降は上と同じ)
 ```
 
 全ての作業が終わったら、トピックマスターをmasterにマージします。
