3章一旦終わり

--- a/git/src/3.branch.md
+++ b/git/src/3.branch.md
@@ -139,13 +139,18 @@ $ git branch --merged
 その後、developブランチにトピックブランチをマージし、
 修正コミットを適応した状態で再度デプロイします。
 
-この修正コミットは、トピックの開発が終わった段階で歴史を改変し、なかったことにします。
+この修正コミットは、コミットとして残す意味はないので、
+トピックの開発が終わった段階で歴史を改変し、なかったことにします。
 
 ```
-$ git rebase -i
+$ git rebase -i master
 ```
 
-で
+で、コミット順の変更や、コミットをまとめる(**squash**)などの歴史改変が可能です。
+
+主観的でも全然構わないので、
+一つ一つのコミットに意味と意図が見えるように、
+コミットの単位を意識して開発しましょう。
 
 #### 6. masterにマージしていいのはトピックブランチだけ
 
