見出し1レベル上げる

--- a/git/src/2.release.md
+++ b/git/src/2.release.md
@@ -1,11 +1,11 @@
-## リリース戦略を考える
+# リリース戦略を考える
 
 まずリリース戦略を考えます。
 サーバに配置(デプロイ)したり、リリースビルドを作ったりするのがリリース作業です。
 プログラミングの最終目標はリリースです。
 リリース戦略から考えることで、作戦の方向性を間違えないようにします。
 
-### もちろんGitを使う
+## もちろんGitを使う
 
 手作業のリリース作業は絶対にしてはいけません。
 gitのコードを自動でリリースする仕組みを作りましょう。
@@ -26,18 +26,18 @@ Chrome Extensionのためのcrxmakeなど、めんどくさがりが多いrubyis
 gitでpushしたら自動で更新されるherokuのようなかっこいいプラットフォームもあります。
 ごく普通のWeb開発ならherokuを使うのが一番楽なんじゃないかと思います。
 
-### デプロイ環境
+## デプロイ環境
 
 Webアプリだと少なくとも3つのデプロイ環境が必要になると思います。
 
-#### production (本番環境)
+### production (本番環境)
 
 実際にユーザがアクセスする本番環境です。
 gitの **masterブランチ** がデプロイされます。
 データは基本的にユーザが登録していくものだけです。
 「本番でテストデータ500件登録させてくださいー」とか言ってくるバカ(実在)は全員ぶっ殺しましょう。
 
-#### staging (本番と同じ状態の開発検証環境)
+### staging (本番と同じ状態の開発検証環境)
 
 本番環境と同じコードが動いている開発検証環境です。
 gitの **masterブランチ** がデプロイされます。
@@ -45,7 +45,7 @@ gitの **masterブランチ** がデプロイされます。
 APIを提供している場合は他チームの開発環境から繋いだり、
 「本番でテストデータ500件登録させてくださいー」とか言ってくるバカ(実在)に「stagingでやれ」って言ったりします。
 
-#### development (開発用環境)
+### development (開発用環境)
 
 開発者が開発用に自由にいじる環境です。
 gitの **developmentブランチ** がデプロイされます。
@@ -54,7 +54,7 @@ gitの **developmentブランチ** がデプロイされます。
 他チームからはあまり繋がせるべきではないと思います。
 「dev動かなくなってるんですけどー 困るんですよねーこっちも開発止まっちゃうんでー」とか言ってくるバカ(実在)には「stagingでやれって行ってんだろクズ!」って言っておきましょう。
 
-### デプロイを踏まえたリモートブランチ運用
+## デプロイを踏まえたリモートブランチ運用
 
 以上のように、リモートブランチとして最低でも、
 
