--- a/git/src/1.about_git.md
+++ b/git/src/1.about_git.md
@@ -1,6 +1,6 @@
-## Gitの特徴
+# Gitの特徴
 
-### 分散型
+## 分散型
 
 gitは分散リポジトリ型です。
 分散型にはsvnのような中央リポジトリはなく、
@@ -14,7 +14,7 @@ gitは分散リポジトリ型です。
 その場合でも、共有リポジトリはただ共有するためでしかなく、
 コミットなどの作業はやはりローカルのリポジトリへ行うことになります。
 
-### 分散型のメリット
+## 分散型のメリット
 
 分散型リポジトリでは、ローカルリポジトリへの操作で、共有リポジトリが変更されることはありません。
 そのため、
@@ -28,7 +28,7 @@ gitは分散リポジトリ型です。
 
 というメリットがあります。
 
-### 分散型で注意すること
+## 分散型で注意すること
 
 共有リポジトリが変更されないという事は、明示的に共有の操作をする必要があるという事です。
 多くの場合、共有リポジトリとローカルリポジトリには乖離が発生し、共有操作で少しずつ解消されていきます。
