--- a/git/src/c83.tex
+++ b/git/src/c83.tex
@@ -13,19 +13,19 @@
 \-
 \newpage
 
-\input{./0.maegaki.tex}
+\input{./maegaki.tex}
 \newpage
 
-\input{./1.about_git.tex}
+\input{./about_git.tex}
 \newpage
 
-\input{./2.release.tex}
+\input{./release.tex}
 \newpage
 
-\input{./3.branch.tex}
+\input{./branch.tex}
 \newpage
 
-\input{./4.workflow.tex}
+\input{./workflow.tex}
 \newpage
 
 \end{document}
