--- a/git/src/c83.tex
+++ b/git/src/c83.tex
@@ -1,5 +1,5 @@
 \documentclass{jarticle}
-\title{失敗しないGit運用マニュアル}
+\title{ニコ書を支えるGit運用マニュアル}
 \author{NP-complete}
 \date{2012/12/31\\コミックマーケット83}
 
@@ -20,14 +20,44 @@
 \newpage
 
 \input{./release.tex}
-\newpage
 
 \input{./branch.tex}
-\newpage
 
+\newpage
 \input{./workflow.tex}
 \newpage
 
 \input{./release_senpai.tex}
+
 \newpage
+\input{./atogaki.tex}
+\newpage
+
+\begin{center}
+  \Large
+  \section*{奥付}
+           {\huge ニコ書を支えるGit運用マニュアル}
+           \\[2.0cm]
+           発行\\
+           NP-complete\\
+           http://np-complete-doj.in
+           \\[1.5cm]
+           著者\\
+           まさらっき\\
+           http://twitter.com/masarakki\\
+           http://github.com/masarakki
+           \\[2.5cm]
+           発行日\\
+           2012/12/31
+\end{center}
+\newpage
+\thispagestyle{empty}
+\-
+\newpage
+\begin{flushright}
+  \-
+\end{flushright}
+
+\thispagestyle{empty}
+
 \end{document}
